@@ -7,6 +7,7 @@ import by.epam.bookshop.resource.DbResourceManager;
 
 import java.io.Closeable;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -105,14 +106,15 @@ public class ConnectionPool implements Closeable {
         capacity = DEFAULT_POOL_SIZE;
         Stream.generate(() -> {
             try {
-                Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+                Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
                 ConnectionProxy connectionProxy
                         = new ConnectionProxy(DriverManager.getConnection(
                         //  "jdbc:mysql://localhost:3306/bookshop?useUnicode=true&serverTimezone=UTC",
                         getDbUrl(),
                         DB_USER, DB_PASSWORD));
                 return connectionProxy;
-            } catch (SQLException | ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+            } catch (SQLException | ClassNotFoundException | InstantiationException | IllegalAccessException
+                    | NoSuchMethodException | InvocationTargetException e) {
                 throw new ConnectionPoolRuntimeException(e);
             }
         })
